--- a/general/index.html
+++ b/general/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
   </head>
   <body>
+    <input type="number" name="" id="num" />
+    <button id="btn">getData</button>
     <script src="general.js"></script>
   </body>
 </html>
