--- a/general/index.html
+++ b/general/index.html
@@ -7,8 +7,9 @@
     <title>Document</title>
   </head>
   <body>
-    <input type="number" name="" id="num" />
-    <button id="btn">getData</button>
+    <!-- <div id="myBox">click me 😃</div>
+    <button id="btn">Click me</button>-->
+    <div id="myBox">😁</div>
     <script src="general.js"></script>
   </body>
 </html>
