image hide and show

--- a/general/index.html
+++ b/general/index.html
@@ -7,9 +7,8 @@
     <title>Document</title>
   </head>
   <body>
-    <!-- <div id="myBox">click me 😃</div>
-    <button id="btn">Click me</button>-->
-    <div id="myBox">😁</div>
+    <div id="myBox">click me 😃</div>
+    <button id="btn">Click me</button>
     <script src="general.js"></script>
   </body>
 </html>
