--- a/Temperature/index.html
+++ b/Temperature/index.html
@@ -11,7 +11,7 @@
       <form id="form">
         <div style="padding: 20px">
           <h2>Temperature conversion</h2>
-          <input type="number" value="0" name="" id="tem-num" /><br />
+          <input type="number" value="0" id="tem-num" /><br />
           <input type="radio" name="Temperature" id="to-f" />
           <label for="to-f">Celsius to Fahrenheit</label><br />
           <input type="radio" name="Temperature" id="to-c" />
